--- a/blog/刚刚看了《海边的曼切斯特》.md
+++ b/blog/刚刚看了《海边的曼切斯特》.md
@@ -3,6 +3,7 @@ title: 刚刚看了《海边的曼切斯特》
 date: 2017-03-04 21:00:45
 tags: [电影, 剧情]
 categories: [Drama]
+authors: [alexchen]
 ---
 
 略闻获奥斯卡不知道什么奖，电影名字不错，就看了。  
