--- a/blog/捣腾博客的中文字体.md
+++ b/blog/捣腾博客的中文字体.md
@@ -3,6 +3,7 @@ title: 捣腾博客的中文字体
 date: 2015-09-26 21:12:51
 tags: []
 categories: [Tech Notes]
+authors: [alexchen]
 ---
 
 中文字体文件体积巨大，通常站长并不会把完整的中文字体文件加入网站当中
